For issue #48. Removed specific height value for header, which was causing bad formatting on smaller viewports.

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -101,7 +101,6 @@ nav {
 
 header {
   float: left;
-  height: 720px;
   width: 300px;
 }
 
